final touches done